--- a/src/HideKnowledgeItemTextFormHelpBoxAddon/HideKnowledgeItemTextFormHelpBox.csproj
+++ b/src/HideKnowledgeItemTextFormHelpBoxAddon/HideKnowledgeItemTextFormHelpBox.csproj
@@ -64,7 +64,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HideKnowledgeItemTextFormHelpBoxAddon.cs" />
+    <Compile Include="Addon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
